--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 body { 
-   background-color: rgb(0, 119, 255); }
-  
+   background-image: url( 'https://c8.alamy.com/compes/prfdh8/codigo-de-programacion-de-futurista-y-grandes-conexiones-de-datos-y-modelos-de-red-ilustracion-3d-prfdh8.jpg'); 
+   background-repeat:no-repeat;
+   background-attachment:fixed;
+   background-attachment: fixed;
+   background-size: 100% 100%;
+   color:#ffffff;
+}
+
    body{font-family: Arial, Helvetica;}
 
     .menu{list-style: none;
@@ -31,6 +37,24 @@ body {
   text-decoration: #690ba0;
   text-align: center;
   padding: 0%;
+}
+
+.form{
+  border: 5px solid rgb(red, green, blue);
+  padding: 0px;
+}
+
+table,td{
+  border:6px solid rgb(11, 165, 111);
+  padding: 3px;
+  
+}
+
+th{
+  border-style:inset;
+  padding: 33px;
+  text-transform: capitalize;
+  color: #ef8354;
 }
 
 
